# gnome-session-sysvinit

./: README.md  meson.build
data/: meson.build
data/sysvinit/: gnome-session-start  gnome-session-stop
src/: gnome-session-ctl.c  meson.build
src/sysvinit/: gnome-session-start.in  gnome-session-stop
