project(
  'gnome-session-sysvinit', 'c',
  version: '50.0',
  license: 'GPL2+',
  meson_version: '>= 0.61.0'
)

session_version = meson.project_version()
session_api_name = '@0@-@1@'.format(meson.project_name(), session_version.split('.')[0])

session_prefix = get_option('prefix')
session_datadir = join_paths(session_prefix, get_option('datadir'))
session_libexecdir = join_paths(session_prefix, get_option('libexecdir'))

set_defines = [
  # package
  ['PACKAGE', meson.project_name()],
  ['PACKAGE_VERSION', session_version],
  ['VERSION', session_version],
]

glib_req_version = '>= 2.82.0'

session_bin_deps = [
  dependency('glib-2.0', version: glib_req_version),
  dependency('gio-2.0', version: glib_req_version),
  dependency('gio-unix-2.0', version: glib_req_version),
  dependency('libelogind', version: '>=209', required: true),
]

pkg = import('pkgconfig')

top_inc = include_directories('.')

conf_data = configuration_data()
conf_data.set_quoted('LIBEXECDIR', session_libexecdir)

configure_file(output: 'config.h', configuration: conf_data)

subdir('src')

summary_dirs = {
  'prefix': get_option('prefix'),
  'datadir': session_datadir,
  'libexecdir': session_libexecdir,
}

summary(summary_dirs, section: 'Directories')
